--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,7 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-service
+  name: rollout-ngnix-active
+spec:
+  selector:
+    app: nginx
+  type: {{ .Values.service.type }}
+  ports:
+    - protocol: {{ .Values.service.protocol | default "TCP" }}
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: rollout-ngnix-preview
 spec:
   selector:
     app: nginx
