--- a/templates/virtualservice.yaml
+++ b/templates/virtualservice.yaml
@@ -12,7 +12,7 @@ spec:
   - match:
     - uri:
         prefix: /
-  - route:
+    route:
     - destination:
         host: rollout-ngnix-active
         port:
