--- a/templates/virtualservice.yaml
+++ b/templates/virtualservice.yaml
@@ -2,12 +2,11 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: my-virtualservice
-  namespace: myapp-ns
 spec:
   hosts:
   - "*"
   gateways:
-  - myapp-ns/my-gateway
+  - default/my-gateway
   http:
   - match:
     - uri:
