--- a/templates/virtualservice.yaml
+++ b/templates/virtualservice.yaml
@@ -2,17 +2,13 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: my-virtualservice
-  namespace: myapp-ns
 spec:
   hosts:
   - "*"
   gateways:
   - myapp-ns/my-gateway
   http:
-  - match:
-    - uri:
-        prefix: /
-    route:
+  - route:
     - destination:
         host: rollout-ngnix-active
         port:
