Changed gateway, vsvc

--- a/templates/gateway.yaml
+++ b/templates/gateway.yaml
@@ -2,7 +2,9 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: my-gateway
-  namespace: default
+  namespace: myapp-ns
+  annotations:
+    networking.istio.io/service-type: ClusterIP
 spec:
   gatewayClassName: istio
   listeners:
