--- a/templates/virtualservice.yaml
+++ b/templates/virtualservice.yaml
@@ -2,11 +2,12 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: my-virtualservice
+  namespacce: myapp-ns
 spec:
   hosts:
   - "*"
   gateways:
-  - default/my-gateway
+  - my-gateway
   http:
   - route:
     - destination:
