--- a/values.yaml
+++ b/values.yaml
@@ -1,9 +1,9 @@
 replicaCount: 3
 
 image:
-  repository: nginx
-  tag: "1.12.0"
-  pullPolicy: IfNotPresent
+  repository: amaljithh/green-page
+  tag: "v1"
+  pullPolicy: Always
 
 service:
   name: nginx-service
