--- a/templates/virtualservice.yaml
+++ b/templates/virtualservice.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: my-virtualservice
-  namespacce: myapp-ns
+  namespace: myapp-ns
 spec:
   hosts:
   - "*"
