Changed my-gateway to istio-ingress gateway

--- a/templates/virtualservice.yaml
+++ b/templates/virtualservice.yaml
@@ -7,7 +7,7 @@ spec:
   hosts:
   - "*"
   gateways:
-  - my-gateway
+  - istio-ingressgateway.istio-system.svc.cluster.local
   http:
   - route:
     - destination:
