--- a/templates/gateway.yaml
+++ b/templates/gateway.yaml
@@ -1,16 +1,15 @@
-apiVersion: gateway.networking.k8s.io/v1
+apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: my-gateway
-  namespace: myapp-ns
-  annotations:
-    networking.istio.io/service-type: ClusterIP
+  namespace: istio-system
 spec:
-  gatewayClassName: istio
-  listeners:
-  - name: http
-    protocol: HTTP
-    port: 80
-    allowedRoutes:
-      namespaces:
-        from: All
+  selector:
+    istio: ingressgateway
+  servers:
+  - port:
+      number: 80
+      name: http
+      protocol: HTTP
+    hosts:
+    - "*"
