--- a/templates/virtualservice.yaml
+++ b/templates/virtualservice.yaml
@@ -7,7 +7,7 @@ spec:
   hosts:
   - "*"
   gateways:
-  - istio-ingressgateway.istio-system.svc.cluster.local
+  - istio-system/my-gateway
   http:
   - route:
     - destination:
