--- a/templates/gateway.yaml
+++ b/templates/gateway.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: my-gateway
-  namespace: istio-system
+  namespace: myapp-ns
 spec:
   selector:
     istio: ingressgateway
