--- a/values.yaml
+++ b/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 3
 
 image:
-  repository: amaljithh/blue-page
+  repository: amaljithh/green-page
   tag: "v1"
   pullPolicy: Always
 
