--- a/templates/rollout.yaml
+++ b/templates/rollout.yaml
@@ -29,6 +29,9 @@ spec:
       steps:
         - setWeight: 20
         - pause: {duration: 10}
+        - analysis:
+            templates:
+              - name: blue-green-check
         - setWeight: 50
         - pause: {duration: 10}
         - setWeight: 70
