--- a/templates/test.yaml
+++ b/templates/test.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AnalysisTemplate
 metadata:
-  name: blue-green-web-check
+  name: blue-green-check
   namespace: myapp-ns
 spec:
   metrics:
