--- a/templates/rollout.yaml
+++ b/templates/rollout.yaml
@@ -28,14 +28,20 @@ spec:
       stableService: rollout-ngnix-active
       steps:
         - setWeight: 20
-        - pause: {duration: 10}
+        - pause: {duration: 5}
         - analysis:
             templates:
               - templateName: blue-green-check
         - setWeight: 50
         - pause: {duration: 10}
+        - analysis:
+            templates:
+              - templateName: blue-green-check
         - setWeight: 70
         - pause: {duration: 10}
+        - analysis:
+            templates:
+              - templateName: blue-green-check
         - setWeight: 100
       trafficRouting:
         istio:
