--- a/templates/test.yaml
+++ b/templates/test.yaml
@@ -15,34 +15,41 @@ spec:
             template:
               spec:
                 restartPolicy: Never
-                shareProcessNamespace: true
+                shareProcessNamespace: true   # Ensures tester can reach app via localhost
                 containers:
+                  # Container 1: The app under test
                   - name: blue-green-app
                     image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
                     ports:
                       - containerPort: 80
-
+                  # Container 2: Tester that verifies the webpage
                   - name: tester
                     image: curlimages/curl:8.6.0
                     command: ["/bin/sh", "-c"]
                     args:
                       - |
-                        echo "Waiting for webserver..."
+                        echo "Waiting for webserver to start..."
                         sleep 5
+
                         echo "Testing connection to blue-green-app container..."
                         response=$(curl -s http://127.0.0.1:80)
+
                         echo "---- RESPONSE START ----"
                         echo "$response"
                         echo "---- RESPONSE END ----"
+
                         if echo "$response" | grep -q "Blue Page"; then
                           echo "OK Blue page detected"
+                          echo 0 > /tmp/argo/analysis/output
                           exit 0
                         elif echo "$response" | grep -q "Green Page"; then
                           echo "OK Green page detected"
+                          echo 0 > /tmp/argo/analysis/output
                           exit 0
                         else
                           echo "FAIL Page not detected"
+                          echo 1 > /tmp/argo/analysis/output
                           exit 1
-                        fi
+
       successCondition: result == 0
       failureCondition: result != 0
